Setup Connection String and DBContext

--- a/API_NEW/appsettings.json
+++ b/API_NEW/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultDbConnection": "Server=.;Database=API_NEW;TrustServerCertificate=True;Trusted_Connection=True;"
+  }
 }
