Create SQL Tables and push Migrations

--- a/API_NEW/appsettings.json
+++ b/API_NEW/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultDbConnection": "Server=.;Database=API_NEW;TrustServerCertificate=True;Trusted_Connection=True;"
+    "DefaultDbConnection": "Server=localhost;Port=5432;Database=API_NEW;User Id=postgres;Password=Mamm"
   }
 }
